<resources>
    <string name="app_name">Coins</string>
    <string name="chnage_curency">Change Currency</string>
    <string name="quick_bal">Quick Check a Coin Balance</string>
    <string name="logout">Log Out</string>
    <string name="my_account">My Account</string>
    <string name="done">Done</string>
    <string name="account_info">Account Info</string>
    <string name="email">Email</string>
    <string name="def_cur">Def Cur</string>
    <string name="default_cur">Default Currency</string>
    <string name="new_password">New Passowrd</string>
    <string name="pass">Pas</string>
    <string name="confrim">Confrim</string>
    <string name="leave_password">Leave blank to leave your current password</string>
    <string name="update_account">Update Account</string>
    <string name="deleting_account">Deleting your account won\'t affect your coins. But it will make us sad.</string>
    <string name="forgot">Forgot your passowrd</string>
    <string name="create_account">Create Account</string>
    <string name="login">Log In</string>
    <string name="never_logged">Never logged in before? That\'s cool. Just enter your email and pick a password. Go for it.</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="enter_your_email">Enter your email and we\'ll send you a temporary password</string>
    <string name="cancel">Cancel</string>
    <string name="send_mail">Send Email</string>
    <string name="login_create">Log In / Create Account</string>
    <string name="locally_coin"> coins stored locally on your device</string>
    <string name="password">Password</string>
    <string name="emp_email">Email can\'t be empty.</string>
    <string name="emp_password">Password can\'t be empty.</string>
    <string name="invalid_email">Please enter valid email.</string>
    <string name="its_looks">It looks like you\'re logging in for the first time. \n Wellcome newbie!</string>
    <string name="refresh">Refresh</string>
    <string name="ok">Ok</string>
    <string name="info">Info</string>
    <string name="delete_account">Delete Account</string>
    <string name="match_password">Password not match.</string>
    <string name="wallet_details">Wallet Details</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="coin_available"> coins in your account</string>
    <string name="network_no">Internet is not available.</string>
    <string name="papupar_currency">Papular Currencies</string>
    <string name="usd">United States Dollar(USD)</string>
    <string name="eur">Euro (EUR)</string>
    <string name="gbp">British Pound Sterling (GBP)</string>
    <string name="pass_len">Please input valid password(at least  6 symbols)</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="already_have">Already have an account? Log In</string>
    <string name="back">Back</string>
</resources>
