<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/log_dp"
        android:text="@string/info"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ten_dp"
        android:gravity="center_horizontal"
        android:text="@string/enter_your_email"
        android:textColor="@color/colorBlack" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dcdba2" />

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/ten_dp"
        android:text="@string/ok"
        android:textColor="@color/colorBlue" />
</LinearLayout>