<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/log_dp"
        android:text="@string/forgot_pass"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five_dp"
        android:gravity="center_horizontal"
        android:padding="@dimen/log_dp"
        android:text="@string/enter_your_email"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/log_dp"
        android:layout_marginLeft="@dimen/log_dp"
        android:layout_marginRight="@dimen/log_dp"
        android:background="@drawable/edt_bg"
        android:ems="10"
        android:padding="@dimen/five_dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dcdba2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/ten_dp"
            android:text="@string/cancel"
            android:textColor="@color/colorBlue"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#dcdba2" />

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/ten_dp"
            android:text="@string/send_mail"
            android:textColor="@color/colorBlue"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>