<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_background">

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_back"
        android:gravity="center"
        android:padding="@dimen/log_dp"
        android:text="@string/back"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/edt_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/ten_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/five_dp"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/email_dp" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="player.one@ready.org"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/five_dp"
                    android:textColor="@color/colorBlue"
                    android:textSize="@dimen/edt_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/five_dp"
                android:background="@color/colorGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/five_dp"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/password"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/email_dp" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@android:color/transparent"
                    android:hint="12345678"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/five_dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/edt_size" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/image_size">

            <TextView
                android:id="@+id/tv_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/five_dp"
                android:shadowColor="@color/colorWhite"
                android:text="@string/forgot"
                android:textColor="@color/colorBlue" />

            <TextView
                android:id="@+id/tv_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/five_dp"
                android:shadowColor="@color/colorWhite"
                android:text="@string/create_account"
                android:textColor="@color/colorBlue" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/ten_dp"
            android:text="@string/login"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/email_dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/log_dp"
            android:text="@string/never_logged"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</RelativeLayout>
