<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context="com.coldstoragecoins.WalletActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGray"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/ten_dp"
                android:text="@string/close"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/wallet_details"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="@dimen/ten_dp"
                android:text="@string/add"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:padding="@dimen/ten_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/tv_balance"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_wallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="- - - - - - - - - - -"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/tv_coin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="0.00000BTC" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="$0.00" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <ImageView
            android:id="@+id/iv_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/bot_dp"
            android:src="@drawable/placeholder" />

        <TextView
            android:id="@+id/tv_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/bot_dp"
            android:padding="@dimen/ten_dp"
            android:text="Remove Wallet"
            android:textColor="@color/colorRed" />

        <TextView
            android:id="@+id/tv_change_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/ten_dp"
            android:text="@string/chnage_curency"
            android:textColor="@color/colorBlue" />
    </LinearLayout>


</ScrollView>
